force-app/main/default/objects/Sales_Team__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>How many years of contract</inlineHelpText>
    <label>Contract</label>
    <type>Checkbox</type>
</CustomField>