force-app/main/default/objects/Sales_Team__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>Enter ur email</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>