force-app/main/default/objects/Sales_Team__c/fields/FR_name__c.field-meta.xml
<CustomField>
    <fullName>FR_name__c</fullName>
    <inlineHelpText>Enter ur name</inlineHelpText>
    <label>FR name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>