force-app/main/default/objects/Sales_Team__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <inlineHelpText>Enter ur mobile number</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>